--- a/ivy.xml
+++ b/ivy.xml
@@ -27,10 +27,10 @@
 	
 <dependencies>	
 	<!-- https://mvnrepository.com/artifact/org.apache.hadoop/hadoop-client -->
-<dependency org="org.apache.hadoop" name="hadoop-client" rev="2.7.3"/>
+<dependency org="org.apache.hadoop" name="hadoop-client" rev="3.2.0"/>
 
 <!-- https://mvnrepository.com/artifact/org.apache.hadoop/hadoop-core -->
-<dependency org="org.apache.hadoop" name="hadoop-core" rev="0.20.205.0"/>
+<!-- <dependency org="org.apache.hadoop" name="hadoop-core" rev="0.20.205.0"/> -->
 
 
 </dependencies>
